Added type script integration

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Pop the Stack is a productivity app with the goal of keeping people focused on the most important tasks for the day. This is achieved by having users add items to their stack at the beginning of each day, then popping each item as they complete them. The goal is to have no items in your stack by the end of the day.",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +14,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/BabyKangaroo117/Pop-The-Stack/issues"
   },
@@ -22,5 +22,11 @@
     "express": "^4.21.2",
     "node": "^23.9.0",
     "nodejs": "^0.0.0"
+  },
+  "devDependencies": {
+    "@tsconfig/node23": "^23.0.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.10",
+    "typescript": "^5.8.2"
   }
 }
